--- a/SpringJpaVersion5/pom.xml
+++ b/SpringJpaVersion5/pom.xml
@@ -52,7 +52,7 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
 			<version>${mapstruct.version}</version>
-
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
