新增 application.properties 中資料庫與 hikariCP 的介紹

--- a/SpringJpaVersion4/src/main/resources/application.properties
+++ b/SpringJpaVersion4/src/main/resources/application.properties
@@ -3,9 +3,18 @@ server.port=8084
 #設定 true 之後，才可以在網頁上開啟資料庫
 #https://matthung0807.blogspot.com/2020/08/spring-boot-h2-database-web-console.html
 # 預設 url : localhost:8080/h2-console
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:frankdb
 spring.h2.console.path=/h2/datasource
 spring.h2.console.enabled=true
+spring.jpa.show-sql=true
 spring.datasource.username=frank
 spring.datasource.password=12345
+
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=500000
+spring.datasource.hikari.max-lifetime=540000
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.connection-test-query=SELECT 1
