新增 log 層級測試

--- a/SpringJpaVersion2/src/main/resources/application.properties
+++ b/SpringJpaVersion2/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.h2.console.enabled=true
 
 #固定 h2 連線網址
 spring.datasource.url=jdbc:h2:mem:testdb
+
+# 設定 log 層級
+logging.level.tw.com.softleader=DEBUG
