--- a/SpringJpaVersion4/src/main/resources/application.properties
+++ b/SpringJpaVersion4/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=540000
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.connection-test-query=SELECT 1
+spring.jpa.hibernate.naming.physical-strategy=tw.com.softleader.SpringJpaVersion4.NewTableNameRule
