--- a/SpringJpaVersion5/pom.xml
+++ b/SpringJpaVersion5/pom.xml
@@ -54,6 +54,11 @@
 			<version>${mapstruct.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.kaczmarzyk</groupId>
+			<artifactId>specification-arg-resolver</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 	</dependencies>
 
